removed breadcrumbs and moved about link to navbar, linke #25 says

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -3,11 +3,7 @@
 <title>{{ SITE_NAME }} / Conditions / {{ object|capfirst }}</title>
 {% include "head.html" with JavaScript='tablesorter' active='conditions' %}
 <div class="container-fluid">
-
-<ol class="breadcrumb">
-  <li><a href="{% url 'conditions:index' %}">Conditions</a></li>
-  <li>{{ object|capfirst }}</li>
-</ol>
+<h1>Condition {{ object|capfirst }}</h1>
 
 {% if object.descripton %}
 <dl class="dl-horizontal">
