--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<title>{{ SITE_NAME }} / Conditions</title>
+<title>{{ SITE_NAME }} / Experimental conditions</title>
 {% include "head.html" with JavaScript='tablesorter' active='conditions' %}
-<div class="container-fluid">
+<div class="container-fluid"><h1>Experimental conditions</h1>
 {% if conditiontype_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
   {% comment %}
