--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Papers</title>
 {% include "head.html" with JavaScript='tablesorter' active='papers' %}
-<div class="container-fluid">
+<div class="container-fluid"><h1>Papers</h1>
 {% if papers_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
   {% comment %}
