fixed up issue #21

--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -2,11 +2,7 @@
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Contributors</title>
 {% include "head.html" with JavaScript='tablesorter' %}
-<div class="container-fluid">
-
-<ol class="breadcrumb">
-  <li>Contributors</li>
-</ol>
+<div class="container-fluid"><h1>Contributors</h1>
 
 <p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} <a href="{% url 'papers:all' %}">publications</a></strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
 
