--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -20,12 +20,11 @@
 
 {% if object.dataset_set.all %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
-  {% if object.notes or contact %}<caption>
+  {% if object.notes or thanks %}<caption>
     {% if object.notes %}<p>{{ object.notes }}</p>{% endif %}
-    {% if contact %}<p>This data was provided by: {{ contact }}</p>{% endif %}
+    {% if thanks %}<p>{{ thanks }}</p>{% endif %}
   </caption>{% endif %}
-  {% if request.GET.verbose >= 1 %}<col/><col/><col/><col/>
-  <col class="bg-info"/><col/><col class="bg-info"/><col class="bg-info"/>{% endif %}
+  {% if request.GET.verbose >= 1 %}<col/><col/><col/><col/><col class="bg-info"/><col/><col class="bg-info"/><col class="bg-info"/>{% endif %}
   <thead>
     <tr>
       <th>Phenotypes</th>
