--- a/templates/head.html
+++ b/templates/head.html
@@ -12,8 +12,8 @@
 {% endif %}{% if 'd3' in JavaScript %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 {% if 'circle' in JavaScript %}
-<link rel="stylesheet" href="{% static 'circle.css' %}">
-<script src="{% static 'circle.js' %}"></script>
+<link rel="stylesheet" href="{% static 'd3/circle.css' %}">
+<script src="{% static 'd3/circle.js' %}"></script>
 {% endif %}{% endif %}{% endif %}
 <link rel="stylesheet" href="{% static 'yp.css' %}">
 </head><body>
