--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -6,10 +6,10 @@
 
 <nav class="pull-right">
   <a class="btn btn-default" href="{% url 'conditions:index' %}">Table</a>
-  <a class="btn btn-default" href="{% url 'conditions:graph' %}">Graph</a>
+  <a class="btn btn-default" href="{% url 'conditions:d3circle' %}">Circle</a>
+  <a class="btn btn-default" href="{% url 'conditions:d3square' %}">Square</a>
 </nav>
 <h1>Experimental conditions</h1>
-
 
 {% if conditiontype_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
