--- a/templates/head.html
+++ b/templates/head.html
@@ -14,6 +14,9 @@
 {% if 'circle' in JavaScript %}
 <link rel="stylesheet" href="{% static 'd3/circle.css' %}">
 <script src="{% static 'd3/circle.js' %}"></script>
+{% elif 'square' in JavaScript %}
+<link rel="stylesheet" href="{% static 'd3/square.css' %}">
+<script src="{% static 'd3/square.js' %}"></script>
 {% endif %}{% endif %}{% endif %}
 <link rel="stylesheet" href="{% static 'yp.css' %}">
 </head><body>
