abstracted some of the d3 stuff

--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -3,14 +3,8 @@
 <title>{{ SITE_NAME }} / Experimental conditions</title>
 {% include "head.html" with JavaScript='tablesorter' active='conditions' %}
 <div class="container-fluid">
-
-<nav class="pull-right">
-  <a class="btn btn-default" href="{% url 'conditions:index' %}">Table</a>
-  <a class="btn btn-default" href="{% url 'conditions:d3circle' %}">Circle</a>
-  <a class="btn btn-default" href="{% url 'conditions:d3square' %}">Square</a>
-</nav>
+{% include "d3menu.html" with namespace='conditions' %}
 <h1>Experimental conditions</h1>
-
 {% if conditiontype_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
   {% comment %}
