--- a/phenotypes/templates/phenotypes/index.html
+++ b/phenotypes/templates/phenotypes/index.html
@@ -2,7 +2,9 @@
 <html lang="en"><head>
 <title>{{ SITE_NAME }} / Phenotypes</title>
 {% include "head.html" with JavaScript='tablesorter' active='phenotypes' %}
-<div class="container-fluid"><h1>Phenotypes</h1>
+<div class="container-fluid">
+{% include "d3menu.html" with namespace='phenotypes' %}
+<h1>Phenotypes</h1>
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
   {% comment %}
 
