--- a/templates/d3menu.html
+++ b/templates/d3menu.html
@@ -1,5 +1,5 @@
 <nav class="pull-right">
   <a class="btn btn-default" href="{% url namespace|add:':index' %}">Table</a>
-  <a class="btn btn-default" href="{% url namespace|add:':d3circle' %}">Circle</a>
-  <a class="btn btn-default" href="{% url namespace|add:':d3square' %}">Square</a>
+  <a class="btn btn-default" href="{% url namespace|add:':circle' %}">Circle</a>
+  <a class="btn btn-default" href="{% url namespace|add:':square' %}">Square</a>
 </nav>
