--- a/templates/d3menu.html
+++ b/templates/d3menu.html
@@ -2,4 +2,5 @@
   <a class="btn btn-default" href="{% url namespace|add:':index' %}">Table</a>
   <a class="btn btn-default" href="{% url namespace|add:':circle' %}">Circle</a>
   <a class="btn btn-default" href="{% url namespace|add:':square' %}">Square</a>
+  <a class="btn btn-default" href="{% url namespace|add:':bubble' %}">Bubble</a>
 </nav>
