Only offer bubble d3.js view, now colored by size.

--- a/templates/d3menu.html
+++ b/templates/d3menu.html
@@ -1,6 +1,6 @@
 <nav class="pull-right">
   <a class="btn btn-default" href="{% url namespace|add:':index' %}">Table</a>
-  <a class="btn btn-default" href="{% url namespace|add:':circle' %}">Circle</a>
-  <a class="btn btn-default" href="{% url namespace|add:':square' %}">Square</a>
+  {#<a class="btn btn-default" href="{% url namespace|add:':circle' %}">Circle</a>#}
+  {#<a class="btn btn-default" href="{% url namespace|add:':square' %}">Square</a>#}
   <a class="btn btn-default" href="{% url namespace|add:':bubble' %}">Bubble</a>
 </nav>
