seporated out the navbar

--- a/conditions/templates/conditions/d3.html
+++ b/conditions/templates/conditions/d3.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+{% include "head.html" with JavaScript="d3" d3=request.resolver_match.url_name %}
 <title>{{ SITE_NAME }} / Experimental conditions</title>
-<script>var flare={{ flare|safe }};</script>
-{% include "head.html" with JavaScript="d3" d3=request.resolver_match.url_name active=request.resolver_match.namespaces.0 %}
+<script>
+var flare={{ flare|safe }};
+var colors=colorbrewer.OrRd[9];
+</script>
+{% include "navbar.html" with active=request.resolver_match.namespaces.0 %}
 <div class="container-fluid">
 {% include "d3menu.html" with namespace=request.resolver_match.namespaces.0 %}
 <h1>Experimental conditions</h1>
