--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+{% include "head.html" with JavaScript='tablesorter' %}
 <title>{{ SITE_NAME }} / Experimental conditions / {{ object|capfirst }}</title>
-{% include "head.html" with JavaScript='tablesorter' active='conditions' %}
+</head><body>
+{% include "navbar.html" with active='conditions' %}
 <div class="container-fluid">
 <h1>{{ object|capfirst }}</h1>
 
