--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html lang="en"><head>
-<title>{{ SITE_NAME }} / Contributors</title>
 {% include "head.html" with JavaScript='tablesorter' %}
+<title>{{ SITE_NAME }} / Contributors</title>
+</head><body>
+{% include "navbar.html" %}
 <div class="container-fluid"><h1>Contributors</h1>
 
 <p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} <a href="{% url 'papers:all' %}">publications</a></strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
