--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head><title>{{ SITE_NAME }}</title>
+<html lang="en"><head>
 {% include "head.html" %}
+<title>{{ SITE_NAME }}</title>
+</head></body>
+{% include "navbar.html" %}
 <div class="container-fluid">
   <h1>Database of systematic mutant phenotypes in yeast</h1>
 
