--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+{% include "head.html" with JavaScript='tablesorter pubmed' %}
 <title>{{ SITE_NAME }} / Papers / {{ object }}</title>
-{% include "head.html" with JavaScript='tablesorter pubmed' active='papers' %}
+</head></body>
+{% include "navbar.html" with active='papers' %}
 <div class="container-fluid">
 
 <section>
