--- a/conditions/templates/conditions/d3.html
+++ b/conditions/templates/conditions/d3.html
@@ -8,8 +8,8 @@ var colors=colorbrewer.OrRd[9];
 </script>
 {% include "navbar.html" with active=request.resolver_match.namespaces.0 %}
 <div class="container-fluid">
-{% include "d3menu.html" with namespace=request.resolver_match.namespaces.0 %}
 <h1>Experimental conditions</h1>
+{% include "d3menu.html" with namespace=request.resolver_match.namespaces.0 active=request.resolver_match.url_name %}
 <div id="graphic">
   <table id="legend">
     <thead>
