removed tablesorter things for #32

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-{% include "head.html" with JavaScript='tablesorter pubmed' %}
+{% include "head.html" with JavaScript='pubmed' %}
 <title>{{ SITE_NAME }} / Papers / {{ object }}</title>
 </head></body>
 {% include "navbar.html" with active='papers' %}
