--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -46,7 +46,7 @@
       </ul></th>{% endif %}
     </tr>
   </thead><tbody>
-    {% for dataset in object.dataset_set.all %}
+    {% for dataset in object.dataset_list %}
     <tr>
       <td>{{ dataset.phenotype.link_detail|safe }}</td>
       <td>{{ dataset.conditionset }}</td>
